--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -50,7 +50,7 @@ body {
     .card-bg-filter {
       top: 0;
       left: 0;
-      $filter: blur(4px);
+      $filter: blur(5px);
       background: rgba($color: $foreground-color, $alpha: 0.5) !important;
       @supports (backdrop-filter: $filter) or (-webkit-backdrop-filter: $filter) {
         background: rgba($color: $foreground-color, $alpha: 0.2) !important;
